--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -1,4 +1,5 @@
 <div class="container p-4">
+  
   <div class="row">
     <div class="col-md-6 mx-auto">
       <div class="card text-center">
@@ -18,7 +19,7 @@
                     </figure>
                     <form action="/signin" method="POST">
                       <div class="form-group">
-                        <input type="type" name="e-mail" placeholder="Correo electronico" class="form-control" autofocus>
+                        <input type="type" name="email" placeholder="Correo electronico" class="form-control" autofocus>
                       </div>
 
                       <div class="form-group">
