--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -1,5 +1,5 @@
+
 <div class="container p-4">
-  
   <div class="row">
     <div class="col-md-6 mx-auto">
       <div class="card text-center">
@@ -19,11 +19,11 @@
                     </figure>
                     <form action="/signin" method="POST">
                       <div class="form-group">
-                        <input type="type" name="email" placeholder="Correo electronico" class="form-control" autofocus>
+                        <input type="email" name="email" placeholder="Correo electronico" class="form-control" autofocus required>
                       </div>
 
                       <div class="form-group">
-                        <input type="password" name="password" placeholder="Contraseña" class="form-control">
+                        <input type="password" name="password" placeholder="Contraseña" class="form-control" pattern="[A-Za-z0-9]*[0-9][A-Za-z0-9]*" required oninvalid="setCustomValidity('Solo valores alfanumericos')">
                       </div>
 
                       <div class="form-group">
