--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -13,19 +13,19 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-          Links
+          Productos
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/links">All Links</a>
+            <a class="dropdown-item" href="/myseeds">Mis productos</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/links/add">Add A Link</a>
+            <a class="dropdown-item" href="/myseeds/add">Agregar Producto</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/profile">Profile</a>
+          <a class="nav-link" href="/profile">Perfil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
+          <a class="nav-link" href="/logout">Cerrar sesion</a>
         </li>
         {{else}}
         <li class="nav-item">
