--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -13,7 +13,7 @@
                   <div class="box">
                     <figure class="avatar">
                       <img
-                        src="https://png.pngtree.com/element_our/20200610/ourlarge/pngtree-seed-germination-seedlings-image_2248450.jpg" alt="Logo Marketplace" width="250" height="220"/>
+                        src="/img/fondo.png" alt="Logo Marketplace" width="250" height="220"/>
                     </figure>
                     <form action="/signup" method="POST">
                       <div class="form-group">
