--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -15,7 +15,7 @@
                   <div class="box">
                     <figure class="avatar">
                       <img
-                        src="/img/fondo.png" alt="Logo Marketplace" width="250" />
+                        src="/img/fondo2.png" alt="Logo Marketplace" width="250" />
                     </figure>
                     <form action="/signin" method="POST">
                       <div class="form-group">
