formulario agregar producto

--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -18,7 +18,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/myseeds">Mis productos</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/myseeds/add">Agregar Producto</a>
+            <a class="dropdown-item" href="seeds/addseed">Agregar Producto</a>
           </div>
         </li>
         <li class="nav-item">
