--- a/src/views/seeds/addseed.hbs
+++ b/src/views/seeds/addseed.hbs
@@ -25,7 +25,7 @@
                       </div>
 
                       <div class="form-group">
-                        <input type="text" name="quantyAvailable" placeholder="Cantidad disponible del producto(Kg)" class="form-control" pattern="^[0-9,$]*$" required oninvalid="setCustomValidity('Solo valores numericos')" oninput="setCustomValidity('')">
+                        <input type="text" name="quantityAvailable" placeholder="Cantidad disponible del producto(Kg)" class="form-control" pattern="^[0-9,$]*$" required oninvalid="setCustomValidity('Solo valores numericos')" oninput="setCustomValidity('')">
                       </div>
 
                       <div class="form-group">
