--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
   <div class="container">
     <a class="navbar-brand" href="/">
       <i class="fas fa-link"></i> Farmganic
@@ -16,9 +16,9 @@
           Productos
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/myseeds">Mis productos</a>
+            <a class="dropdown-item" href="/seeds">Mis productos</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="seeds/addseed">Agregar Producto</a>
+            <a class="dropdown-item" href="/seeds/addseed">Agregar Producto</a>
           </div>
         </li>
         <li class="nav-item">
