--- a/src/views/seeds/edit.hbs
+++ b/src/views/seeds/edit.hbs
@@ -9,36 +9,36 @@
             <div class="hero-body">
               <div class="container has-text-center">
                 <div class="column is-4 is-offset-4">
-                  <p class="subtitle has-text-grey">Agrega los datos del producto que desees.</p>
+                  <p class="subtitle has-text-grey">Actualize su producto.</p>
                   <div class="box">
                     <figure class="avatar">
                       <img
                         src="/img/imagen.png" alt="Logo Marketplace" width="250" height="220"/>
                     </figure>
-                    <form action="/seeds/addseed" method="POST">
+                    <form action="/seeds/edit/{{seed.idSeed}}" method="POST">
                       <div class="form-group">
-                        <input type="text" name="name" placeholder="Nombre Semilla" class="form-control" autofocus required>
+                        <input type="text" value="{{seed.name}}" name="name" placeholder="Nombre Semilla" class="form-control" autofocus required>
                       </div>
 
                       <div class="form-group">
-                            <textarea name="description" rows="2" class="form-control" placeholder="Descripcion del producto"></textarea>
+                            <textarea name="description" rows="2" class="form-control" placeholder="Descripcion del producto" value="{{seeds.description}}">{{seed.description}}</textarea>
                       </div>
 
                       <div class="form-group">
-                        <input type="text" name="quantityAvailable" placeholder="Cantidad disponible del producto(Kg)" class="form-control" pattern="^[0-9,$]*$" required oninvalid="setCustomValidity('Solo valores numericos')" oninput="setCustomValidity('')">
+                        <input type="text" value="{{seed.quantityAvailable}}" name="quantityAvailable" placeholder="Cantidad disponible del producto(Kg)" class="form-control" pattern="^[0-9,$]*$" required oninvalid="setCustomValidity('Solo valores numericos')" oninput="setCustomValidity('')">
                       </div>
 
                       <div class="form-group">
-                        <input type="text" name="priceKg" placeholder="Ingrese el precio por Kg del producto" class="form-control" pattern="^[0-9,$]*$" required oninvalid="setCustomValidity('Solo valores numericos')" oninput="setCustomValidity('')">
+                        <input type="text" value="{{seed.priceKg}}" name="priceKg" placeholder="Ingrese el precio por Kg del producto" class="form-control" pattern="^[0-9,$]*$" required oninvalid="setCustomValidity('Solo valores numericos')" oninput="setCustomValidity('')">
                       </div>
 
                       <div class="form-group">
-                        <input type="text" name="cultivationTown" placeholder="Lugar de cultivacion" class="form-control" required >
+                        <input type="text" value="{{seed.cultivationTown}}" name="cultivationTown" placeholder="Lugar cultivacion" class="form-control" required >
                       </div>
 
                     <div class="form-group">
                         <button class="btn btn-success btn-block">
-                          Agregar Producto
+                          Actualizar Producto
                         </button>
                       </form>
                     </div>
