--- a/src/views/seeds/edit.hbs
+++ b/src/views/seeds/edit.hbs
@@ -3,7 +3,7 @@
     <div class="col-md-6 mx-auto">
       <div class="card text-center">
         <div class="card-header">
-          <h3>Agregar Producto</h3></div>
+          <h3>Editar Producto</h3></div>
         <div class="card-body">
           <section class="hero is-success is-fullheight">
             <div class="hero-body">
