--- a/src/views/seeds/list.hbs
+++ b/src/views/seeds/list.hbs
@@ -5,7 +5,7 @@
             <div class="card-body mt-5 ml-5">
                 <div class="media-left canBeDelited">
                     <figure class="avatar">
-                        <img src="/img/imagen.png" alt="Image" class="canBeDelited" width="100" />
+                        <img src="/img/fondo3.jpg" alt="Image" class="canBeDelited" width="150" height="100"  align="center"/>
                     </figure>
                 </div>
                 <div class="media-content canBeDelited">
