--- a/src/views/seeds/singleItem.hbs
+++ b/src/views/seeds/singleItem.hbs
@@ -1,24 +1,23 @@
-<div class="hero-body">
+<div class="hero-body p-5">
   <div class="container has-text-centered">
     <div class="columns is-vcentered">
       <div class="column is-5">
         <figure class="image shadow brighten ">
-          <img id="img" src="/img/fondo3.jpg" alt="Description"/>
+          <img id="img" src="/img/fondo3.jpg" alt="Description" width="500"/>
         </figure>
       </div>
       <div class="column is-6 is-offset-1">
-        <p id="name" value="" class="title is-2">
-        </p>
-        <h2 id="size" value=""class="subtitle is-4">
-        </h2>
-        <h2 id="price"  value=""class="subtitle is-4">
-        </h2>
-        <h2 id="quality"  value=""class="subtitle is-4">
-        </h2>
-        <h2 id="description" value="" class="subtitle is-4">
-        </h2>
+        <p id="name" class="title is-2">{{seller.name}}</p>
+        <h2 id="quantity" class="subtitle is-4">{{seller.quantityAvailable}}</h2>
+        <h2 id="price" class="subtitle is-4">{{seller.priceKg}}</h2>
+        <h2 id="cultivationTown"  value=""class="subtitle is-4">{{seller.cultivationTown}}</h2>
+        <h2 id="description" class="subtitle is-4">{{seller.description}}</h2>
+        <h2 id="fullname" class="subtitle is-4">{{seller.fullname}}</h2>
+        <h2 id="email" class="subtitle is-4">{{seller.email}}</h2>
+        <h2 id="phone" class="subtitle is-4">{{seller.phone}}</h2>
+        <h2 id="department" class="subtitle is-4">{{seller.department}}</h2>
+        <h2 id="town" class="subtitle is-4">{{seller.town}}</h2>
         <br />
-        
       </div>
     </div>
   </div>
