--- a/src/views/mainPage.hbs
+++ b/src/views/mainPage.hbs
@@ -2,13 +2,13 @@
         <div class="row">
         {{#each allSeeds}}
         <div class="col-md-3">
-            <div class="card-body mt-5 ml-5">
-                <div class="media-left canBeDelited">
+            <div class="card mt-5 ml-5 text-center">
+                <div class="media-left canBeDelited mt-5">
                     <figure class="avatar">
                         <img src="/img/fondo3.jpg" alt="Image" class="canBeDelited" width="150" height="100"  align="center"/>
                     </figure>
                 </div>
-                <div class="media-content canBeDelited">
+                <div class="media-content canBeDelited ml-5 mr-5">
                     <p class="canBeDelited">
                         <span class="title canBeDelited"><b>Nombre:</b>
                             {{name}}
@@ -25,14 +25,13 @@
                         </span>
                     </p>
                     <p class="canBeDelited">
-                        <span class="title canBeDelited has-text-black is-6"><b>Descripcion:</b>
+                        <span class="title canBeDelited has-text-black is-6 ml-1 mr-1"><b>Descripcion:</b>
                         {{description}}
                         </span>
                     </p>
-                    <div class="ml-5">
+                    <div class="mb-3">
                         <a href="seeds/singleItem/{{idSeed}}" class="btn btn-primary">Ver</a>
                     </div>
-                    
                 </div>
             </div>
         </div>
