--- a/src/views/mainPage.hbs
+++ b/src/views/mainPage.hbs
@@ -1,4 +1,10 @@
 <div class="container-fluid">
+        <div class="container mt-5">
+            <input type="text" id="formulario" class="form-control my-2">
+            <div class="mb-3">
+                <a href="/search" class="btn btn-primary">Buscar</a>
+            </div>
+        </div>
         <div class="row">
         {{#each allSeeds}}
         <div class="col-md-3">
