--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -29,10 +29,10 @@
         </li>
         {{else}}
         <li class="nav-item">
-          <a class="nav-link" href="/signin">Iniciar Sesion&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+          <a class="nav-link" href="/signin" style="margin-right: 20px;">Iniciar Sesion</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="signup">Registrarse</a>
+          <a class="nav-link" href="/signup">Registrarse</a>
         </li>
         {{/if}}
 
