--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -9,7 +9,7 @@
         </div>
     </div>
 </div>
-<div class="container p-4", style="margin-top: 20px;">
+<div class="container p-4", style="margin-top: 10px;">
   <div class="row">
     <div class="col-md-6 mx-auto">
       <div class="card text-center">
@@ -21,7 +21,7 @@
               <div class="container has-text-center">
                 <div class="column is-4 is-offset-4">
                   <div class="box">
-                    <figure class="avatar">
+                    <figure class="avatar", style="margin-bottom: 30px ;">
                       <img
                         src="/img/fondoUsuario.jpg" alt="Fondo user" width="250" height="220"/>
                     </figure>
