--- a/src/views/auth/searchLog.hbs
+++ b/src/views/auth/searchLog.hbs
@@ -1,9 +1,8 @@
 <div class="container-fluid">
-        </div>
         <div class="row">
-        {{#each allSeeds}}
+        {{#each searchSeedsLog}}
         <div class="col-md-3">
-            <div class="card mt-5 ml-5 text-center">
+            <div class="card mt-5 ml-5 text-center mt-5 ml-5">
                 <div class="media-left canBeDelited mt-5">
                     <figure class="avatar">
                         <img src="/img/fondo3.jpg" alt="Image" class="canBeDelited" width="150" height="100"  align="center"/>
@@ -26,20 +25,14 @@
                         </span>
                     </p>
                     <p class="canBeDelited">
-                        <span class="title canBeDelited has-text-black is-6 ml-1 mr-1"><b>Descripcion:</b>
+                        <span class="title canBeDelited has-text-black is-6"><b>Descripcion:</b>
                         {{description}}
                         </span>
                     </p>
-                    <div class="mb-3">
-                        <a href="seeds/singleItem/{{idSeed}}" class="btn btn-primary">Ver</a>
-                    </div>
+                    <a href="seeds/singleItem/{{idSeed}}" class="btn btn-primary mb-3">Ver</a>
+                    <a href="/seeds/edit/{{idSeed}}" class="btn btn-primary mb-3">Editar</a>
+                    <a href="/seeds/delete/{{idSeed}}" class="btn btn-danger mb-3">Eliminar</a>
                 </div>
-            </div>
-        </div>
-    {{else}}
-         <div class="col-md-4 mx-auto mt-3">
-            <div class="card card-body text-center">
-                <p>Aun no se han publicado productos</p>
             </div>
         </div>
     {{/each}}
