--- a/src/views/auth/search.hbs
+++ b/src/views/auth/search.hbs
@@ -35,6 +35,12 @@
                 </div>
             </div>
         </div>
+    {{else}}
+         <div class="col-md-4 mx-auto mt-3">
+            <div class="card card-body text-center">
+                <p>Producto no encontrado</p>
+            </div>
+        </div>
     {{/each}}
     </div>
 </div>
