--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -30,7 +30,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/profile">Perfil</a>
+          <a class="nav-link" href="/profile">Perfil Usuario</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Cerrar sesion</a>
